--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet-async": "^1.3.0",
     "react-progressbar": "^15.4.1",
     "react-router-dom": "^6.13.0",
+    "react-router-hash-link": "^2.4.3",
     "scrollmagic": "^2.0.8",
     "sort-by": "^1.2.0"
   },
