email js keys secured done and many more work done

--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.12.17",
     "gsap": "^3.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.10.1",
     "react-progressbar": "^15.4.1",
     "react-router-dom": "^6.13.0",
     "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.8.9",
     "scrollmagic": "^2.0.8",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
